--- a/frontend/src/content/css/chat-messages.css
+++ b/frontend/src/content/css/chat-messages.css
@@ -10,7 +10,8 @@
 }
 
 .chat-message.user {
-  justify-content: flex-end;
+  justify-content: flex-start !important;
+  text-align: left !important;
 }
 
 .message-content {
@@ -34,8 +35,8 @@
 .chat-message.user .message-text {
   background: #2d3748;
   color: #ffffff;
-  margin-left: auto;
-  max-width: 80%;
+  max-width: 100%;
+  margin-right: auto;
   width: auto;
 }
 
@@ -44,7 +45,7 @@
   background: #2a2a2a;
   color: #e6e6e6;
   border: 1px solid #333333;
-  max-width: 85%;
+  max-width: 100%;
   margin-right: auto;
   width: auto;
 } 
